# Travel-Management

./: CMakeLists.txt  cidade.c  cidade.h  cliente.c  cliente.h  historico_e_pesquisa.c  historico_e_pesquisa.h  main.c  poi.c  poi.h  tsp.c  tsp.h  viagem.c  viagem.h
Ficheiros/: ficheiro_cliente.c  ficheiro_cliente.h
Ficheiros/txt/: cidades_e_poi.txt  clientes_e_viagens.txt
test/: cidade_test.c  cidade_test.h  cliente_test.c  cliente_test.h  ficheiro_cliente_test.c  ficheiro_cliente_test.h  poi_test.c  poi_test.h  viagem_test.c  viagem_test.h
